--- a/Task01/task01.css
+++ b/Task01/task01.css
@@ -1,102 +1,76 @@
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+* {
+  padding: 0;
   margin: 0;
-  background: #fff;
+  box-sizing: border-box;
 }
-.left {
-  flex: 1;
-  padding: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-.content {
-  max-width: 404px;
-  margin: 0 auto;
-}
-.right {
-  width: 781.5px;
-  height: 1042px;
-  flex-shrink: 0;
-  border-radius: 45px 0px 0px 45px;
-}
-h2 {
-  color: #000;
-  font-family: Poppins;
-  font-size: 32px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-.form-group {
-  margin-bottom: 15px;
-  color: #000;
-  font-family: Poppins;
+html {
   font-size: 14px;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
-  font-weight: 500;
-  line-height: normal;
 }
-label {
-  display: block;
-  margin-bottom: 5px;
-  color: #000;
-  font-family: Poppins;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-input[type="text"],
-input[type="password"] {
-  width: 404px;
-  height: 32px;
-  padding: 10px 0px 10px 10px;
-  align-items: flex-start;
-  gap: 10px;
-  flex-shrink: 0;
-  border: 1px solid #d9d9d9;
-  border-radius: 10px;
-}
-.terms {
-  width: 128px;
-  height: 15.321px;
-  flex-shrink: 0;
-  margin-bottom: 20px;
-  color: #000;
-  font-family: Poppins;
-  font-size: 9px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+.container {
   display: flex;
   align-items: center;
+  width: 100%;
+  height: 100vh;
+  > * {
+    width: 50%;
+    height: 100%;
+  }
+  > img {
+    display: block;
+    margin: auto;
+    object-fit: cover;
+  }
+
+  > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
-.terms input[type="checkbox"] {
-  margin-right: 5px;
-}
-.signup-btn {
+form.register {
   width: 404px;
-  height: 35.019px;
-  flex-shrink: 0;
-  padding: 10px 0px 10px 10px;
-  background: #3a5b22;
-  color: #fff;
-  font-family: Poppins;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  border-radius: 10px;
-  border: 1px solid #3a5b22;
-  cursor: pointer;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-.signup-btn:hover {
-  background-color: #2d5032;
+  max-width: 100%;
+  h1 {
+    font-size: 32px;
+    font-weight: 500;
+    margin-bottom: 64px;
+  }
+  .form-group {
+    margin-bottom: 20px;
+    label,
+    input,
+    button {
+      display: block;
+      width: 100%;
+    }
+    input {
+      border-radius: 10px;
+      border: 1px solid #d9d9d9;
+      padding: 10px;
+    }
+    input[type="checkbox"] {
+      display: inline;
+      width: 10px;
+      height: 10px;
+    }
+
+    button {
+      color: #fff;
+      font-weight: 700;
+      background-color: #3a5b22;
+      text-align: center;
+      padding: 10px;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      transition: all ease-in-out 0.4s;
+    }
+    button:hover {
+      background-color: #a1c487;
+    }
+  }
 }
 .or {
   width: 404px;
@@ -104,7 +78,7 @@ input[type="password"] {
   display: flex;
   align-items: center;
   text-align: center;
-  padding: 45px 0;
+  padding-top: 35px;
   font-size: 14px;
   color: #000;
   margin: 0 auto;
@@ -114,15 +88,17 @@ input[type="password"] {
   content: "";
   flex: 1;
   height: 1px;
-  background: #000;
+  background: #f5f5f5;
 }
 .or span {
   padding: 0 10px;
 }
 .social-buttons {
   display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
+  justify-content: space-around;
+  gap: 10px;
+  margin-top: 89px;
+  text-decoration: none;
 }
 .social-btn {
   display: flex;
